# audio_dedup

./: .gitignore  README.md  __main__.py  cache.py  models.py  pyproject.toml  reporter.py  requirements.txt  scanner.py
matchers/: fingerprint.py  names.py  tags.py
src/audio_dedup/: __main__.py  apply_dedup.py  cache.py  models.py  reporter.py  scanner.py
src/audio_dedup/matchers/: duplicates.py  fingerprint.py  identity.py  indexing.py
